# ComfyUI-Chord

./: README.md  nodes.py  pyproject.toml  requirements.txt
example_workflows/: chord_image_to_material.json
src/module/: stable_diffusion.py
