[project]
name = "comfyui-chord"
description = "PBR material estimation custom nodes for paper: Chord: Chain of Rendering Decomposition for PBR Material Estimation from Generated Texture Images"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/ubisoft/ComfyUI-Chord"

[tool.comfy]
PublisherId = "ubisoft-laforge"
DisplayName = "ComfyUI-Chord"